CHANGES
=======

0.2.13
------

* update deploy key

0.2.12
------

* respect column ordering in yalchemy indexes and primary keys (#15)

0.2.11
------

* primary keys should be ordered (#13)

0.2.10
------


0.2.9
-----

* [DI-8] Temple update 2018-07-27 (#11)
* [DI-8] Temple update 2018-07-26 (#10)

0.2.8
-----

* Improve yaml loader for Yalchemy.from\_yaml() (#7)

0.2.7
-----

* Fix AUTHORS auto-update by pbr (#5)

0.2.6
-----

* Relax core dependencies and fix AUTHORS (#3)

0.2.5
-----

* Remove temporary README.md which is taking precedence over README.rst (#2)

0.2.4
-----

* Initial open source release of yalchemy (#1)
* first commit