@@ -5,3 +5,4 @@ Bijan Vakili <bijan.vakili@cloverhealth.com>
 Christian Miller <christian.david.miller@gmail.com>
 Circle CI <oss@cloverhealth.com>
 Matt Davis <jiffyclub@gmail.com>
+Ryan SIU <ryan.siu@cloverhealth.com>
