@@ -1,6 +1,4 @@
 geoalchemy2>=0.4.2
 sqlalchemy>=1.1
-pyyaml>=3.12
-
-# 19.2 causes pytest failure on TypeError: attrib() got an unexpected keyword argument 'convert'
-attrs>=17.4.0,<19.2.0
+pyyaml~=5.3.1
+attrs~=19.2.0
