@@ -10,7 +10,7 @@ flake8==3.5.0
 psycopg2==2.7.3.2
 pycodestyle==2.3.1
 pylint==1.8.2
-pytest==3.4.0
+pytest~=3.10.0
 pytest-mock==1.6.3
 pytest-pgsql==1.0.1
 
